<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/theme_dark_grey"
            app:layout_constraintHeight_percent="0.35" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/lay_toolbar"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_alignParentTop="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/im_back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_left_arrow" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/my_cart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_placeorder"
                android:layout_below="@+id/lay_toolbar">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="35dp"
                        android:horizontalSpacing="1dp"
                        android:orientation="vertical"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="15dp"
                        app:cardUseCompatPadding="true">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/total_cost"
                                android:textColor="@color/hard_brown"
                                android:textSize="18sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/txt_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2.5dp"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="22sp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:padding="5dp"
                        android:text="@string/review_orders"
                        android:textColor="@color/theme_dark_grey"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/view_dish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/btn_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="15dp"
                        android:padding="5dp"
                        android:text="@string/show_more"
                        android:textColor="@color/theme_dark_grey"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="5dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:gravity="center"
                                android:padding="10dp"
                                android:tint="@color/hard_brown"
                                app:srcCompat="@drawable/ic_dinner" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/dine_in"
                                android:textColor="@color/theme_dark_grey"
                                android:textSize="16sp" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </androidx.appcompat.widget.LinearLayoutCompat>


                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="5dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:gravity="center"
                                android:padding="10dp"
                                android:tint="@color/hard_brown"
                                app:srcCompat="@drawable/ic_food_delivery" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/take_way"
                                android:textColor="@color/theme_dark_grey"
                                android:textSize="16sp" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </RadioGroup>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_placeorder"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/theme_btn_grey"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/place_order"
                android:textAllCaps="true"
                app:cornerRadius="0dp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>





