<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/im_restaurant"
            app:layout_constraintHeight_percent="0.35" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/im_back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_left_arrow" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_about" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_share" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:horizontalSpacing="1dp"
                        android:orientation="vertical"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="15dp"
                        app:cardUseCompatPadding="true">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/kritunga_restaurant"
                                android:textColor="@color/theme_dark_grey"
                                android:textSize="18sp" />

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="24dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="center"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:tint="@color/theme_light_grey"
                                    app:srcCompat="@drawable/ic_favourite" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:padding="2.5dp"
                                    android:text="@string/_5_0_200"
                                    android:textColor="@color/theme_light_grey"
                                    android:textSize="14sp" />

                                <View
                                    android:layout_width="1dp"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_margin="5dp"
                                    android:background="@color/theme_light_grey" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:padding="2.5dp"
                                    android:text="@string/all_days_09_00_am_06_00_pm"
                                    android:textColor="@color/theme_light_grey"
                                    android:textSize="14sp" />
                            </androidx.appcompat.widget.LinearLayoutCompat>

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="24dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="center"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:tint="@color/theme_light_grey"
                                    app:srcCompat="@drawable/ic_phone" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/reach_us_at_9854562142"
                                    android:textColor="@color/theme_light_grey"
                                    android:textSize="14sp" />

                            </androidx.appcompat.widget.LinearLayoutCompat>

                            <com.google.android.material.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:text="@string/book_a_table"
                                android:textAllCaps="true"
                                app:backgroundTint="@color/theme_btn_grey"
                                app:cornerRadius="5dp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>


                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:padding="5dp"
                        android:text="@string/starters"
                        android:textColor="@color/theme_dark_grey"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/view_dish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:paddingBottom="52dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottomsheet_cart" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>





